// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> renders text by default 1`] = `
<label
  className="input_label"
>
  <input
    className="input"
    type="text"
  />
</label>
`;

exports[`<Input /> renders with label 1`] = `
<label
  className="input_label"
>
  <span>
    Dis cool?
  </span>
  <input
    className="input"
    type="text"
  />
</label>
`;
